Add bottom rotatoe potatoes

--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
         </tr>
 
         <tr>
-            <td><div class="button" onclick="event.preventDefault()"></div></td>
+            <td><div class="button ba" style="background-image: url(images/ur.png)" onclick="event.preventDefault(); window.cube.act(ACTION_ROT, ROT_F, false)"></div></td>
             <td><div class="button ba" style="background-image: url(images/d.png)" onclick="event.preventDefault(); window.cube.act(ACTION_ROT, ROT_L, true)"></div></td>
             <td><div class="button ba" style="background-image: url(images/d.png)" onclick="event.preventDefault(); window.cube.act(ACTION_ROT, ROT_X, false)"></div></td>
             <td><div class="button ba" style="background-image: url(images/d.png)" onclick="event.preventDefault(); window.cube.act(ACTION_ROT, ROT_R, false)"></div></td>
-            <td><div class="button" onclick="event.preventDefault()"></div></td>
+            <td><div class="button ba" style="background-image: url(images/ul.png)" onclick="event.preventDefault(); window.cube.act(ACTION_ROT, ROT_F, true)"></div></td>
         </tr>
 
         <tr>
